--- a/FileFormat-toc.html
+++ b/FileFormat-toc.html
@@ -3,39 +3,39 @@
    <li>
       PDF
       <ul>
-         <li><a href="/PDF/overview">Overview</a></li>
-         <li><a href="/PDF/getting-started">Getting Started</a></li>
-         <li><a href="/PDF/Working-with-Document">Working with Document</a></li>
-         <li><a href="/PDF/Working-with-Pages">Working with Pages</a></li>
-         <li><a href="/PDF/Working-with-Text">Working with Text</a></li>
-         <li><a href="/PDF/Working-with-Images">Working with Images</a></li>
-         <li><a href="/PDF/Working-with-Tables">Working with Tables</a></li>
-         <li><a href="/PDF/Working-with-forms">Working with forms</a></li>
-		 <li><a href="/PDF/Merge-Documents">Merge Documents</a></li>
-		 <li><a href="/PDF/Working-with-Text-Extraction">Working with Text Extraction</a></li>
-		 <li><a href="/PDF/Working-with-Image-Extraction">Working with Image Extraction</a></li>
-		 <li><a href="/PDF/document-conversion">Working with Document Conversions</a></li>
-		 <li><a href="/PDF/Working-with-OCR">Working with OCR</a></li>
-		 <li><a href="/PDF/Working-with-HyperLinks">Working with HyperLinks</a></li>
-         <li><a href="/PDF/Working-with-PDF-Templates">Working with PDF Templates</a></li>
-		 <li><a href="/PDF/working-with-header-and-footer-template">Working with Header and footer template</a></li>
-		 <li><a href="/PDF/Working-with-Shapes">Working with Shapes</a></li>
-         <li><a href="/PDF/Working-with-Bookmarks">Working with Bookmarks</a></li>
-         <li><a href="/PDF/Working-with-Annotations">Working with Annotations</a></li>
-         <li><a href="/PDF/Working-with-Attachments">Working with Attachments</a></li>
-		 <li><a href="/PDF/Working-with-Security">Working with Security</a></li>
-		 <li><a href="/PDF/Working-with-DigitalSignature">Working with DigitalSignature</a></li>
-		 <li><a href="/PDF/Working-with-barcode">Working with barcode</a></li>
-		 <li><a href="/PDF/Working-with-action">Working with action</a></li>
-		 <li><a href="/PDF/Working-with-Watermarks">Working with Watermarks</a></li>
-		 <li><a href="/PDF/Working-with-Portfolio">Working with Portfolio</a></li>
-		 <li><a href="/PDF/Working-with-Layers">Working with Layers</a></li>
-		 <li><a href="/PDF/Working-with-Tagged-PDF">Working with Tagged PDF</a></li>
-         <li><a href="/PDF/Working-with-Compression">Working with Compression</a></li>
-		 <li><a href="/PDF/Working-with-PDF-Conformance">Working with PDF Conformance</a></li>
-         <li><a href="/PDF/Working-with-Metadata">Working with Metadata</a></li>
-         <li><a href="/PDF/Working-with-Colorspace">Working with Colorspace</a></li>
-		 <li><a href="/PDF/Supported-and-Unsupported-Elements">Supported and Unsupported Elements</a></li>
+         <li><a href="/file-formats/pdf/overview">Overview</a></li>
+         <li><a href="/file-formats/pdf/getting-started">Getting Started</a></li>
+         <li><a href="/file-formats/pdf/working-with-document">Working with Document</a></li>
+         <li><a href="/file-formats/pdf/working-with-pages">Working with Pages</a></li>
+         <li><a href="/file-formats/pdf/working-with-text">Working with Text</a></li>
+         <li><a href="/file-formats/pdf/working-with-images">Working with Images</a></li>
+         <li><a href="/file-formats/pdf/working-with-tables">Working with Tables</a></li>
+         <li><a href="/file-formats/pdf/working-with-forms">Working with forms</a></li>
+		 <li><a href="/file-formats/pdf/merge-documents">Merge Documents</a></li>
+		 <li><a href="/file-formats/pdf/working-with-text-extraction">Working with Text Extraction</a></li>
+		 <li><a href="/file-formats/pdf/working-with-image-extraction">Working with Image Extraction</a></li>
+		 <li><a href="/file-formats/pdf/document-conversion">Working with Document Conversions</a></li>
+		 <li><a href="/file-formats/pdf/working-with-ocr">Working with OCR</a></li>
+		 <li><a href="/file-formats/pdf/working-with-hyperlinks">Working with HyperLinks</a></li>
+         <li><a href="/file-formats/pdf/working-with-pdf-templates">Working with PDF Templates</a></li>
+		 <li><a href="/file-formats/pdf/working-with-header-and-footer-template">Working with Header and footer template</a></li>
+		 <li><a href="/file-formats/pdf/working-with-shapes">Working with Shapes</a></li>
+         <li><a href="/file-formats/pdf/working-with-bookmarks">Working with Bookmarks</a></li>
+         <li><a href="/file-formats/pdf/working-with-annotations">Working with Annotations</a></li>
+         <li><a href="/file-formats/pdf/working-with-attachments">Working with Attachments</a></li>
+		 <li><a href="/file-formats/pdf/working-with-security">Working with Security</a></li>
+		 <li><a href="/file-formats/pdf/working-with-digitalsignature">Working with DigitalSignature</a></li>
+		 <li><a href="/file-formats/pdf/working-with-barcode">Working with barcode</a></li>
+		 <li><a href="/file-formats/pdf/working-with-action">Working with action</a></li>
+		 <li><a href="/file-formats/pdf/working-with-watermarks">Working with Watermarks</a></li>
+		 <li><a href="/file-formats/pdf/working-with-portfolio">Working with Portfolio</a></li>
+		 <li><a href="/file-formats/pdf/working-with-layers">Working with Layers</a></li>
+		 <li><a href="/file-formats/pdf/working-with-tagged-pdf">Working with Tagged PDF</a></li>
+         <li><a href="/file-formats/pdf/working-with-compression">Working with Compression</a></li>
+		 <li><a href="/file-formats/pdf/working-with-pdf-conformance">Working with PDF Conformance</a></li>
+         <li><a href="/file-formats/pdf/working-with-metadata">Working with Metadata</a></li>
+         <li><a href="/file-formats/pdf/working-with-colorspace">Working with Colorspace</a></li>
+		 <li><a href="/file-formats/pdf/supported-and-unsupported-elements">Supported and Unsupported Elements</a></li>
       </ul>
    </li>
 </ul>
