File-Formats changes and TOC has been committed.

--- a/FileFormat-toc.html
+++ b/FileFormat-toc.html
@@ -1,5 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ul class="treeview">
+
+ <li>
+      DocIO
+      <ul>
+         <li><a href="/file-formats/docio/overview">Overview</a></li>
+         <li><a href="/file-formats/docio/getting-started">Getting Started</a></li>
+         <li><a href="/file-formats/docio/accepting-or-rejecting-track-changes">Accepting or Rejecting Track Changes</a></li>
+         <li><a href="/file-formats/docio/applying-watermark">Applying Watermark</a></li>
+         <li><a href="/file-formats/docio/conversion">Conversion</a></li>
+         <li><a href="/file-formats/docio/fields">Fields</a></li>
+         <li><a href="/file-formats/docio/find-and-replace">Find and Replace</a></li>
+		 <li><a href="/file-formats/docio/footnotes-and-endnotes">Footnotes and endnotes</a></li>
+		 <li><a href="/file-formats/docio/loading-and-saving-document">Loading and Saving document</a></li>
+		 <li><a href="/file-formats/docio/mailmerge">MailMerge</a></li>
+		 <li><a href="/file-formats/docio/security">Security</a></li>
+		 <li><a href="/file-formats/docio/supported-and-unsupported-features">Supported and Unsupported Features</a></li>
+		 <li><a href="/file-formats/docio/tips">Tips</a></li>
+         <li><a href="/file-formats/docio/working-with-bookmarks">Working with Bookmarks</a></li>
+		 <li><a href="/file-formats/docio/working-with-charts">Working with Charts</a></li>
+		 <li><a href="/file-formats/docio/working-with-comments">Working with Comments</a></li>
+         <li><a href="/file-formats/docio/working-with-form-fields">Working with Form Fields</a></li>
+         <li><a href="/file-formats/docio/working-with-macros">Working with Macros</a></li>
+         <li><a href="/file-formats/docio/working-with-paragraph">Working with Paragraph</a></li>
+		 <li><a href="/file-formats/docio/working-with-sections">Working with Sections</a></li>
+		 <li><a href="/file-formats/docio/working-with-table-Of-contents">Working with Table Of Contents</a></li>
+		 <li><a href="/file-formats/docio/working-with-tables">Working with Tables</a></li>
+		 <li><a href="/file-formats/docio/working-with-word-document">Working with Word document</a></li>
+		 <li><a href="/file-formats/docio/faq">FAQ</a></li>
+      </ul>
+   </li>
    <li>
       PDF
       <ul>
@@ -20,22 +50,49 @@
          <li><a href="/file-formats/pdf/working-with-pdf-templates">Working with PDF Templates</a></li>
 		 <li><a href="/file-formats/pdf/working-with-header-and-footer-template">Working with Header and footer template</a></li>
 		 <li><a href="/file-formats/pdf/working-with-shapes">Working with Shapes</a></li>
+		 <li><a href="/file-formats/pdf/working-with-silverlight">Working with Silverlight</a></li>
          <li><a href="/file-formats/pdf/working-with-bookmarks">Working with Bookmarks</a></li>
          <li><a href="/file-formats/pdf/working-with-annotations">Working with Annotations</a></li>
          <li><a href="/file-formats/pdf/working-with-attachments">Working with Attachments</a></li>
+		 <li><a href="/file-formats/pdf/working-with-asp">Working with Asp</a></li>
 		 <li><a href="/file-formats/pdf/working-with-security">Working with Security</a></li>
 		 <li><a href="/file-formats/pdf/working-with-digitalsignature">Working with DigitalSignature</a></li>
 		 <li><a href="/file-formats/pdf/working-with-barcode">Working with barcode</a></li>
 		 <li><a href="/file-formats/pdf/working-with-action">Working with action</a></li>
 		 <li><a href="/file-formats/pdf/working-with-watermarks">Working with Watermarks</a></li>
+		 <li><a href="/file-formats/pdf/working-with-xamarin">Working with Xamarin</a></li>
+		 <li><a href="/file-formats/pdf/working-with-windows-phone">Working with Windows phone</a></li>
+		 <li><a href="/file-formats/pdf/working-with-winrt">Working with Winrt</a></li>
 		 <li><a href="/file-formats/pdf/working-with-portfolio">Working with Portfolio</a></li>
 		 <li><a href="/file-formats/pdf/working-with-layers">Working with Layers</a></li>
+		 <li><a href="/file-formats/pdf/working-with-mvc">Working with MVC</a></li>
 		 <li><a href="/file-formats/pdf/working-with-tagged-pdf">Working with Tagged PDF</a></li>
          <li><a href="/file-formats/pdf/working-with-compression">Working with Compression</a></li>
 		 <li><a href="/file-formats/pdf/working-with-pdf-conformance">Working with PDF Conformance</a></li>
          <li><a href="/file-formats/pdf/working-with-metadata">Working with Metadata</a></li>
          <li><a href="/file-formats/pdf/working-with-colorspace">Working with Colorspace</a></li>
 		 <li><a href="/file-formats/pdf/supported-and-unsupported-elements">Supported and Unsupported Elements</a></li>
+      </ul>
+   </li>
+   <li>
+      Presentation
+      <ul>
+         <li><a href="/file-formats/presentation/overview">Overview</a></li>
+         <li><a href="/file-formats/presentation/getting-started">Getting Started</a></li>
+         <li><a href="/file-formats/presentation/conversion">Conversion</a></li>
+         <li><a href="/file-formats/presentation/document-object-model">Document Object Model  </a></li>
+         <li><a href="/file-formats/presentation/loading-and-saving-the-presentation">Loading and Saving the Presentation  </a></li>
+         <li><a href="/file-formats/presentation/security">Security</a></li>
+         <li><a href="/file-formats/presentation/tips">Tips</a></li>
+		 <li><a href="/file-formats/presentation/working-with-charts">Working with Charts</a></li>
+		 <li><a href="/file-formats/presentation/working-with-images">Working with Images</a></li>
+		 <li><a href="/file-formats/presentation/working-with-list">Working with List</a></li>
+		 <li><a href="/file-formats/presentation/working-with-paragraphs">Working with Paragraphs </a></li>
+		 <li><a href="/file-formats/presentation/working-with-powerpoint-presentation">Working with PowerPoint presentation</a></li>
+		 <li><a href="/file-formats/presentation/working-with-shapes">Working with shapes</a></li>
+         <li><a href="/file-formats/presentation/working-with-slide">Working with Slide</a></li>
+		 <li><a href="/file-formats/presentation/working-with-tables">Working with Tables</a></li>
+		 <li><a href="/file-formats/presentation/faq">FAQ</a></li>
       </ul>
    </li>
 </ul>
