--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -35,6 +35,12 @@
       <ul>
          <li><a href="/file-formats/pdf/overview">Overview</a></li>
          <li><a href="/file-formats/pdf/getting-started">Getting Started</a></li>
+		 <li><a href="/file-formats/pdf/working-with-asp">ASP.NET</a></li>
+		 <li><a href="/file-formats/pdf/working-with-mvc">ASP.NET MVC</a></li>
+		 <li><a href="/file-formats/pdf/working-with-silverlight">Silverlight</a></li>
+		 <li><a href="/file-formats/pdf/working-with-winrt">WinRT</a></li>
+		 <li><a href="/file-formats/pdf/working-with-windows-phone">Windows phone</a></li>
+		 <li><a href="/file-formats/pdf/working-with-xamarin">XAMARIN</a></li>
          <li><a href="/file-formats/pdf/working-with-document">Working with Document</a></li>
          <li><a href="/file-formats/pdf/working-with-pages">Working with Pages</a></li>
          <li><a href="/file-formats/pdf/working-with-text">Working with Text</a></li>
@@ -44,34 +50,28 @@
 		 <li><a href="/file-formats/pdf/merge-documents">Merge Documents</a></li>
 		 <li><a href="/file-formats/pdf/working-with-text-extraction">Working with Text Extraction</a></li>
 		 <li><a href="/file-formats/pdf/working-with-image-extraction">Working with Image Extraction</a></li>
-		 <li><a href="/file-formats/pdf/document-conversion">Working with Document Conversions</a></li>
+		 <li><a href="/file-formats/pdf/Working-with-Document-Conversions">Working with Document Conversions</a></li>
 		 <li><a href="/file-formats/pdf/working-with-ocr">Working with OCR</a></li>
 		 <li><a href="/file-formats/pdf/working-with-hyperlinks">Working with HyperLinks</a></li>
          <li><a href="/file-formats/pdf/working-with-pdf-templates">Working with PDF Templates</a></li>
-		 <li><a href="/file-formats/pdf/working-with-header-and-footer-template">Working with Header and footer template</a></li>
+		 <li><a href="/file-formats/pdf/Working-with-Headers-and-Footers">Working with Headers and Footers</a></li>
 		 <li><a href="/file-formats/pdf/working-with-shapes">Working with Shapes</a></li>
-		 <li><a href="/file-formats/pdf/working-with-silverlight">Working with Silverlight</a></li>
          <li><a href="/file-formats/pdf/working-with-bookmarks">Working with Bookmarks</a></li>
          <li><a href="/file-formats/pdf/working-with-annotations">Working with Annotations</a></li>
          <li><a href="/file-formats/pdf/working-with-attachments">Working with Attachments</a></li>
-		 <li><a href="/file-formats/pdf/working-with-asp">Working with Asp</a></li>
 		 <li><a href="/file-formats/pdf/working-with-security">Working with Security</a></li>
 		 <li><a href="/file-formats/pdf/working-with-digitalsignature">Working with DigitalSignature</a></li>
 		 <li><a href="/file-formats/pdf/working-with-barcode">Working with barcode</a></li>
 		 <li><a href="/file-formats/pdf/working-with-action">Working with action</a></li>
 		 <li><a href="/file-formats/pdf/working-with-watermarks">Working with Watermarks</a></li>
-		 <li><a href="/file-formats/pdf/working-with-xamarin">Working with Xamarin</a></li>
-		 <li><a href="/file-formats/pdf/working-with-windows-phone">Working with Windows phone</a></li>
-		 <li><a href="/file-formats/pdf/working-with-winrt">Working with Winrt</a></li>
 		 <li><a href="/file-formats/pdf/working-with-portfolio">Working with Portfolio</a></li>
 		 <li><a href="/file-formats/pdf/working-with-layers">Working with Layers</a></li>
-		 <li><a href="/file-formats/pdf/working-with-mvc">Working with MVC</a></li>
 		 <li><a href="/file-formats/pdf/working-with-tagged-pdf">Working with Tagged PDF</a></li>
          <li><a href="/file-formats/pdf/working-with-compression">Working with Compression</a></li>
 		 <li><a href="/file-formats/pdf/working-with-pdf-conformance">Working with PDF Conformance</a></li>
          <li><a href="/file-formats/pdf/working-with-metadata">Working with Metadata</a></li>
          <li><a href="/file-formats/pdf/working-with-colorspace">Working with Colorspace</a></li>
-		 <li><a href="/file-formats/pdf/supported-and-unsupported-elements">Supported and Unsupported Elements</a></li>
+		 <li><a href="/file-formats/pdf/Supported-and-Unsupported-Features">Supported and Unsupported Features</a></li>
       </ul>
    </li>
    <li>
