Fixed the internal link issues

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -1,36 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ul class="treeview">
-
- <li>
+	<li>
       DocIO
-      <ul>
-         <li><a href="/file-formats/docio/overview">Overview</a></li>
-         <li><a href="/file-formats/docio/getting-started">Getting Started</a></li>
-         <li><a href="/file-formats/docio/accepting-or-rejecting-track-changes">Accepting or Rejecting Track Changes</a></li>
-         <li><a href="/file-formats/docio/applying-watermark">Applying Watermark</a></li>
-         <li><a href="/file-formats/docio/conversion">Conversion</a></li>
-         <li><a href="/file-formats/docio/fields">Fields</a></li>
-         <li><a href="/file-formats/docio/find-and-replace">Find and Replace</a></li>
-		 <li><a href="/file-formats/docio/footnotes-and-endnotes">Footnotes and endnotes</a></li>
-		 <li><a href="/file-formats/docio/loading-and-saving-document">Loading and Saving document</a></li>
-		 <li><a href="/file-formats/docio/mailmerge">MailMerge</a></li>
-		 <li><a href="/file-formats/docio/security">Security</a></li>
-		 <li><a href="/file-formats/docio/supported-and-unsupported-features">Supported and Unsupported Features</a></li>
-		 <li><a href="/file-formats/docio/tips">Tips</a></li>
-         <li><a href="/file-formats/docio/working-with-bookmarks">Working with Bookmarks</a></li>
-		 <li><a href="/file-formats/docio/working-with-charts">Working with Charts</a></li>
-		 <li><a href="/file-formats/docio/working-with-comments">Working with Comments</a></li>
-         <li><a href="/file-formats/docio/working-with-form-fields">Working with Form Fields</a></li>
-         <li><a href="/file-formats/docio/working-with-macros">Working with Macros</a></li>
-         <li><a href="/file-formats/docio/working-with-paragraph">Working with Paragraph</a></li>
-		 <li><a href="/file-formats/docio/working-with-sections">Working with Sections</a></li>
-		 <li><a href="/file-formats/docio/working-with-table-Of-contents">Working with Table Of Contents</a></li>
-		 <li><a href="/file-formats/docio/working-with-tables">Working with Tables</a></li>
-		 <li><a href="/file-formats/docio/working-with-word-document">Working with Word document</a></li>
-		 <li><a href="/file-formats/docio/faq">FAQ</a></li>
-      </ul>
-   </li>
-   <li>
+		<ul>
+			<li>
+				<a href="/DocIO/Overview">Overview</a>
+			</li>
+			<li>
+				<a href="/DocIO/Getting-Started">Getting Started</a>
+			</li>
+			<li>
+				<a href="/DocIO/Document-Object-Model-representation">Document Object Model representation</a>
+			</li>
+			<li>
+				<a href="/DocIO/Loading-&-Saving-document">Loading & Saving document</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Word-document">Working with Word document</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Sections">Working with Sections</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Paragraph">Working with Paragraph</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Tables">Working with Tables</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Bookmarks">Working with Bookmarks</a>
+			</li>
+			<li>
+				<a href="/DocIO/Fields">Fields</a>
+			</li>
+			<li>
+				<a href="/DocIO/MailMerge">MailMerge</a>
+			</li>
+			<li>
+				<a href="/DocIO/Find-and-Replace">Find and Replace</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Table-Of-Contents">Working with Table Of Contents</a>
+			</li>
+			<li>
+				<a href="/DocIO/Applying-Watermark">Applying Watermark</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Comments">Working with Comments</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Form-Fields">Working with Form Fields</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Charts">Working with Charts</a>
+			</li>
+			<li>
+				<a href="/DocIO/Security">Security</a>
+			</li>
+			<li>
+				<a href="/DocIO/Footnotes-and-endnotes">Footnotes and endnotes</a>
+			</li>
+			<li>
+				<a href="/DocIO/Working-with-Macros">Working with Macros</a>
+			</li>
+			<li>
+				<a href="/DocIO/Accepting-or-Rejecting-Track-Changes">Accepting or Rejecting Track Changes</a>
+			</li>
+			<li>
+				<a href="/DocIO/Conversion">Conversion</a>
+			</li>
+			<li>
+				<a href="/DocIO/Supported-and-Unsupported-Features">Supported and Unsupported Features</a>
+			</li>
+			<li>
+				<a href="/DocIO/Tips">Tips</a>
+			</li>
+			<li>
+				<a href="/DocIO/FAQ">FAQ/How to</a>
+			</li>
+		</ul>
+	</li>
+	<li>
       PDF
       <ul>
          <li><a href="/file-formats/pdf/overview">Overview</a></li>
@@ -76,23 +126,55 @@
    </li>
    <li>
       Presentation
-      <ul>
-         <li><a href="/file-formats/presentation/overview">Overview</a></li>
-         <li><a href="/file-formats/presentation/getting-started">Getting Started</a></li>
-         <li><a href="/file-formats/presentation/conversion">Conversion</a></li>
-         <li><a href="/file-formats/presentation/document-object-model">Document Object Model  </a></li>
-         <li><a href="/file-formats/presentation/loading-and-saving-the-presentation">Loading and Saving the Presentation  </a></li>
-         <li><a href="/file-formats/presentation/security">Security</a></li>
-         <li><a href="/file-formats/presentation/tips">Tips</a></li>
-		 <li><a href="/file-formats/presentation/working-with-charts">Working with Charts</a></li>
-		 <li><a href="/file-formats/presentation/working-with-images">Working with Images</a></li>
-		 <li><a href="/file-formats/presentation/working-with-list">Working with List</a></li>
-		 <li><a href="/file-formats/presentation/working-with-paragraphs">Working with Paragraphs </a></li>
-		 <li><a href="/file-formats/presentation/working-with-powerpoint-presentation">Working with PowerPoint presentation</a></li>
-		 <li><a href="/file-formats/presentation/working-with-shapes">Working with shapes</a></li>
-         <li><a href="/file-formats/presentation/working-with-slide">Working with Slide</a></li>
-		 <li><a href="/file-formats/presentation/working-with-tables">Working with Tables</a></li>
-		 <li><a href="/file-formats/presentation/faq">FAQ</a></li>
-      </ul>
-   </li>
+		<ul>
+			<li>
+				<a href="/Presentation/Overview">Overview</a>
+			</li>
+			<li>
+				<a href="/Presentation/Getting-Started">Getting Started</a>
+			</li>
+			<li>
+				<a href="/Presentation/Document-Object-Model">Document Object Model</a>
+			</li>
+			<li>
+				<a href="/Presentation/Loading-&-saving-Presentation-file">Loading & saving presentation file</a>
+			</li>
+			<li>
+				<a href="/Presentation/Working-with-PowerPoint-presentation">Working with PowerPoint presentation</a>
+			</li>
+			<li>
+				<a href="/Presentation/Working-with-Slide">Working with Slides</a>
+			</li>
+			<li>
+				<a href="/Presentation/Working-with-paragraphs">Working with Paragraphs</a>
+			</li>
+			<li>
+				<a href="/Presentation/Working-with-list">Working with Lists</a>
+			</li>
+			<li>
+				<a href="/Presentation/Working-with-shapes">Working with Shapes</a>
+			</li>
+			<li>
+				<a href="/Presentation/Working-with-images">Working with Images</a>
+			</li>
+			<li>
+				<a href="/Presentation/Working-with-Tables">Working with Tables</a>
+			</li>
+			<li>
+				<a href="/Presentation/Working-with-Charts">Working with Charts</a>
+			</li>
+			<li>
+				<a href="/Presentation/Security">Security</a>
+			</li>
+			<li>
+				<a href="/Presentation/Conversion">Conversion</a>
+			</li>
+			<li>
+				<a href="/Presentation/Tips">Tips</a>
+			</li>
+			<li>
+				<a href="/Presentation/FAQ">FAQ/How to</a>
+			</li>			
+		</ul>
+	</li>
 </ul>
