File-Formats-toc.html edited online with Bitbucket

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -16,7 +16,7 @@
 				<a href="/DocIO/Loading-&-Saving-document">Loading & Saving document</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Word-document">Working with Word document</a>
+				<a href="/DocIO/Working-with-document">Working with Document</a>
 			</li>
 			<li>
 				<a href="/DocIO/Working-with-Sections">Working with Sections</a>
@@ -31,7 +31,7 @@
 				<a href="/DocIO/Working-with-Bookmarks">Working with Bookmarks</a>
 			</li>
 			<li>
-				<a href="/DocIO/Fields">Fields</a>
+				<a href="/DocIO/Fields">Working with Fields</a>
 			</li>
 			<li>
 				<a href="/DocIO/MailMerge">MailMerge</a>
@@ -43,7 +43,7 @@
 				<a href="/DocIO/Working-with-Table-Of-Contents">Working with Table Of Contents</a>
 			</li>
 			<li>
-				<a href="/DocIO/Applying-Watermark">Applying Watermark</a>
+				<a href="/DocIO/Applying-Watermark">Working with Watermark</a>
 			</li>
 			<li>
 				<a href="/DocIO/Working-with-Comments">Working with Comments</a>
@@ -67,7 +67,7 @@
 				<a href="/DocIO/Accepting-or-Rejecting-Track-Changes">Accepting or Rejecting Track Changes</a>
 			</li>
 			<li>
-				<a href="/DocIO/Conversion">Conversion</a>
+				<a href="/DocIO/Conversion">Working with Document Conversion</a>
 			</li>
 			<li>
 				<a href="/DocIO/Supported-and-Unsupported-Features">Supported and Unsupported Features</a>
@@ -76,7 +76,7 @@
 				<a href="/DocIO/Tips">Tips</a>
 			</li>
 			<li>
-				<a href="/DocIO/FAQ">FAQ/How to</a>
+				<a href="/DocIO/FAQ">FAQ</a>
 			</li>
 		</ul>
 	</li>
@@ -140,7 +140,7 @@
 				<a href="/Presentation/Loading-&-saving-Presentation-file">Loading & saving presentation file</a>
 			</li>
 			<li>
-				<a href="/Presentation/Working-with-PowerPoint-presentation">Working with PowerPoint presentation</a>
+				<a href="/Presentation/Working-with-Presentation">Working with Presentation</a>
 			</li>
 			<li>
 				<a href="/Presentation/Working-with-Slide">Working with Slides</a>
@@ -173,7 +173,7 @@
 				<a href="/Presentation/Tips">Tips</a>
 			</li>
 			<li>
-				<a href="/Presentation/FAQ">FAQ/How to</a>
+				<a href="/Presentation/FAQ">FAQ</a>
 			</li>			
 		</ul>
 	</li>
