File-Formats-toc.html edited online with Bitbucket

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -39,7 +39,7 @@
 		 <li><a href="/file-formats/pdf/working-with-mvc">ASP.NET MVC</a></li>
 		 <li><a href="/file-formats/pdf/working-with-silverlight">Silverlight</a></li>
 		 <li><a href="/file-formats/pdf/working-with-winrt">WinRT</a></li>
-		 <li><a href="/file-formats/pdf/working-with-windows-phone">Windows phone</a></li>
+		 <li><a href="/file-formats/pdf/working-with-windows-phone">Windows Phone</a></li>
 		 <li><a href="/file-formats/pdf/working-with-xamarin">XAMARIN</a></li>
          <li><a href="/file-formats/pdf/working-with-document">Working with Document</a></li>
          <li><a href="/file-formats/pdf/working-with-pages">Working with Pages</a></li>
