File-Formats-toc.html edited online with Bitbucket

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -22,7 +22,7 @@
 				<a href="/DocIO/Working-with-Sections">Working with Sections</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Paragraph">Working with Paragraph</a>
+				<a href="/DocIO/Working-with-Paragraph">Working with Paragraphs</a>
 			</li>
 			<li>
 				<a href="/DocIO/Working-with-Tables">Working with Tables</a>
