File-Formats-toc.html edited online with Bitbucket

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -13,7 +13,7 @@
 				<a href="/DocIO/Document-Object-Model-representation">Document Object Model representation</a>
 			</li>
 			<li>
-				<a href="/DocIO/Loading-&-Saving-document">Loading & Saving document</a>
+				<a href="/DocIO/Loading-and-Saving-document">Loading and Saving document</a>
 			</li>
 			<li>
 				<a href="/DocIO/Working-with-document">Working with Document</a>
@@ -137,7 +137,7 @@
 				<a href="/Presentation/Document-Object-Model">Document Object Model</a>
 			</li>
 			<li>
-				<a href="/Presentation/Loading-&-saving-Presentation-file">Loading & saving presentation file</a>
+				<a href="/Presentation/Loading-and-saving-Presentation-file">Loading and saving presentation file</a>
 			</li>
 			<li>
 				<a href="/Presentation/Working-with-Presentation">Working with Presentation</a>
