Modified the TOC based topic order.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -4,79 +4,97 @@
       DocIO
 		<ul>
 			<li>
-				<a href="/DocIO/Overview">Overview</a>
+				<a href="/file-formats/DocIO/Overview">Overview</a>
 			</li>
 			<li>
-				<a href="/DocIO/Getting-Started">Getting Started</a>
+				<a href="/file-formats/DocIO/Getting-Started">Getting Started</a>
 			</li>
 			<li>
-				<a href="/DocIO/Document-Object-Model-representation">Document Object Model representation</a>
+				<a href="/file-formats/DocIO/Document-Object-Model-representation">Document Object Model representation</a>
 			</li>
 			<li>
-				<a href="/DocIO/Loading-and-Saving-document">Loading and Saving document</a>
+				<a href="/file-formats/DocIO/Loading-&-Saving-document">Loading & Saving document</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-document">Working with Document</a>
+				<a href="/file-formats/DocIO/Working-with-Asp">Working with ASP</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Sections">Working with Sections</a>
+				<a href="/file-formats/DocIO/Working-with-MVC">Working with MVC</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Paragraph">Working with Paragraphs</a>
+				<a href="/file-formats/DocIO/Working-with-Silverlight">Working with Silverlight</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Tables">Working with Tables</a>
+				<a href="/file-formats/DocIO/Working-with-WinRT">Working with WinRT</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Bookmarks">Working with Bookmarks</a>
+				<a href="/file-formats/DocIO/Working-with-Windows-Phone">Working with Windows Phone</a>
 			</li>
 			<li>
-				<a href="/DocIO/Fields">Working with Fields</a>
+				<a href="/file-formats/DocIO/Working-with-UWP">Working with UWP</a>
 			</li>
 			<li>
-				<a href="/DocIO/MailMerge">MailMerge</a>
+				<a href="/file-formats/DocIO/Working-with-Xamarin">Working with Xamarin</a>
 			</li>
 			<li>
-				<a href="/DocIO/Find-and-Replace">Find and Replace</a>
+				<a href="/file-formats/DocIO/Working-with-document">Working with Document</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Table-Of-Contents">Working with Table Of Contents</a>
+				<a href="/file-formats/DocIO/Working-with-Sections">Working with Sections</a>
 			</li>
 			<li>
-				<a href="/DocIO/Applying-Watermark">Working with Watermark</a>
+				<a href="/file-formats/DocIO/Working-with-Paragraph">Working with Paragraphs</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Comments">Working with Comments</a>
+				<a href="/file-formats/DocIO/Working-with-Tables">Working with Tables</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Form-Fields">Working with Form Fields</a>
+				<a href="/file-formats/DocIO/Working-with-Bookmarks">Working with Bookmarks</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Charts">Working with Charts</a>
+				<a href="/file-formats/DocIO/Working-with-Fields">Working with Fields</a>
 			</li>
 			<li>
-				<a href="/DocIO/Security">Security</a>
+				<a href="/file-formats/DocIO/Working-with-MailMerge">Working with MailMerge</a>
 			</li>
 			<li>
-				<a href="/DocIO/Footnotes-and-endnotes">Footnotes and endnotes</a>
+				<a href="/file-formats/DocIO/Working-with-Find-and-Replace">Working with Find and Replace</a>
 			</li>
 			<li>
-				<a href="/DocIO/Working-with-Macros">Working with Macros</a>
+				<a href="/file-formats/DocIO/Working-with-Table-Of-Contents">Working with Table Of Contents</a>
 			</li>
 			<li>
-				<a href="/DocIO/Accepting-or-Rejecting-Track-Changes">Accepting or Rejecting Track Changes</a>
+				<a href="/file-formats/DocIO/Applying-Watermark">Working with Watermark</a>
 			</li>
 			<li>
-				<a href="/DocIO/Conversion">Working with Document Conversion</a>
+				<a href="/file-formats/DocIO/Working-with-Comments">Working with Comments</a>
 			</li>
 			<li>
-				<a href="/DocIO/Supported-and-Unsupported-Features">Supported and Unsupported Features</a>
+				<a href="/file-formats/DocIO/Working-with-Form-Fields">Working with Form Fields</a>
 			</li>
 			<li>
-				<a href="/DocIO/Tips">Tips</a>
+				<a href="/file-formats/DocIO/Working-with-Charts">Working with Charts</a>
 			</li>
 			<li>
-				<a href="/DocIO/FAQ">FAQ</a>
+				<a href="/file-formats/DocIO/Working-with-Security">Working with Security</a>
+			</li>
+			<li>
+				<a href="/file-formats/DocIO/Working-with-Footnotes-and-endnotes">Working with Footnotes and endnotes</a>
+			</li>
+			<li>
+				<a href="/file-formats/DocIO/Working-with-Macros">Working with Macros</a>
+			</li>
+			<li>
+				<a href="/file-formats/DocIO/Accepting-or-Rejecting-Track-Changes">Accepting or Rejecting Track Changes</a>
+			</li>
+			<li>
+				<a href="/file-formats/DocIO/Conversion">Working with Document Conversion</a>
+			</li>
+			<li>
+				<a href="/file-formats/DocIO/Supported-and-Unsupported-Features">Supported and Unsupported Features</a>
+			</li>
+			<li>
+				<a href="/file-formats/DocIO/FAQ">FAQ</a>
 			</li>
 		</ul>
 	</li>
@@ -128,52 +146,58 @@
       Presentation
 		<ul>
 			<li>
-				<a href="/Presentation/Overview">Overview</a>
+				<a href="/file-formats/Presentation/Overview">Overview</a>
 			</li>
 			<li>
-				<a href="/Presentation/Getting-Started">Getting Started</a>
+				<a href="/file-formats/Presentation/Getting-Started">Getting Started</a>
 			</li>
 			<li>
-				<a href="/Presentation/Document-Object-Model">Document Object Model</a>
+				<a href="/file-formats/Presentation/Document-Object-Model">Document Object Model</a>
 			</li>
 			<li>
-				<a href="/Presentation/Loading-and-saving-Presentation-file">Loading and saving presentation file</a>
+				<a href="/file-formats/Presentation/Loading-&-saving-Presentation-file">Loading & saving presentation file</a>
+			</li>			
+			<li>
+				<a href="/file-formats/presentation/ASP.NET">ASP.NET</a>
 			</li>
 			<li>
-				<a href="/Presentation/Working-with-Presentation">Working with Presentation</a>
+				<a href="/file-formats/presentation/ASP.NET-MVC">ASP.NET MVC</a>
 			</li>
 			<li>
-				<a href="/Presentation/Working-with-Slide">Working with Slides</a>
+				<a href="/file-formats/Presentation/Working-with-Presentation">Working with Presentation</a>
 			</li>
 			<li>
-				<a href="/Presentation/Working-with-paragraphs">Working with Paragraphs</a>
+				<a href="/file-formats/Presentation/Working-with-Slide">Working with Slides</a>
 			</li>
 			<li>
-				<a href="/Presentation/Working-with-list">Working with Lists</a>
+				<a href="/file-formats/Presentation/Working-with-paragraphs">Working with Paragraphs</a>
 			</li>
 			<li>
-				<a href="/Presentation/Working-with-shapes">Working with Shapes</a>
+				<a href="/file-formats/Presentation/Working-with-list">Working with Lists</a>
 			</li>
 			<li>
-				<a href="/Presentation/Working-with-images">Working with Images</a>
+				<a href="/file-formats/Presentation/Working-with-shapes">Working with Shapes</a>
 			</li>
 			<li>
-				<a href="/Presentation/Working-with-Tables">Working with Tables</a>
+				<a href="/file-formats/Presentation/Working-with-images">Working with Images</a>
 			</li>
 			<li>
-				<a href="/Presentation/Working-with-Charts">Working with Charts</a>
+				<a href="/file-formats/Presentation/Working-with-Tables">Working with Tables</a>
 			</li>
 			<li>
-				<a href="/Presentation/Security">Security</a>
+				<a href="/file-formats/Presentation/Working-with-Charts">Working with Charts</a>
 			</li>
 			<li>
-				<a href="/Presentation/Conversion">Conversion</a>
+				<a href="/file-formats/Presentation/Security">Security</a>
 			</li>
 			<li>
-				<a href="/Presentation/Tips">Tips</a>
+				<a href="/file-formats/Presentation/Conversion">Conversion</a>
 			</li>
 			<li>
-				<a href="/Presentation/FAQ">FAQ</a>
+				<a href="/file-formats/Presentation/Tips">Tips</a>
+			</li>
+			<li>
+				<a href="/file-formats/Presentation/FAQ">FAQ</a>
 			</li>			
 		</ul>
 	</li>
