File-Formats-toc.html edited online with Bitbucket

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -16,25 +16,25 @@
 				<a href="/file-formats/DocIO/Loading-&-Saving-document">Loading & Saving document</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-Asp">Working with ASP</a>
+				<a href="/file-formats/DocIO/Working-with-Asp">ASP.NET</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-MVC">Working with MVC</a>
+				<a href="/file-formats/DocIO/Working-with-MVC">ASP.NET MVC</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-Silverlight">Working with Silverlight</a>
+				<a href="/file-formats/DocIO/Working-with-Silverlight">Silverlight</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-WinRT">Working with WinRT</a>
+				<a href="/file-formats/DocIO/Working-with-WinRT">WinRT</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-Windows-Phone">Working with Windows Phone</a>
+				<a href="/file-formats/DocIO/Working-with-Windows-Phone">Windows Phone</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-UWP">Working with UWP</a>
+				<a href="/file-formats/DocIO/Working-with-UWP">UWP</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-Xamarin">Working with Xamarin</a>
+				<a href="/file-formats/DocIO/Working-with-Xamarin">Xamarin</a>
 			</li>
 			<li>
 				<a href="/file-formats/DocIO/Working-with-document">Working with Document</a>
