Added the new UG content for Asp, MVC, WInRT, Silverlight, WP, UWP and Xamarine

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -16,25 +16,25 @@
 				<a href="/file-formats/DocIO/Loading-&-Saving-document">Loading & Saving document</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-Asp">ASP.NET</a>
+				<a href="/file-formats/DocIO/ASP.NET">ASP.NET</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-MVC">ASP.NET MVC</a>
+				<a href="/file-formats/DocIO/ASP.NET-MVC">ASP.NET MVC</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-Silverlight">Silverlight</a>
+				<a href="/file-formats/DocIO/Silverlight">Silverlight</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-WinRT">WinRT</a>
+				<a href="/file-formats/DocIO/WinRT">WinRT</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-Windows-Phone">Windows Phone</a>
+				<a href="/file-formats/DocIO/Windows-Phone">Windows Phone</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-UWP">UWP</a>
+				<a href="/file-formats/DocIO/UWP">UWP</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-Xamarin">Xamarin</a>
+				<a href="/file-formats/DocIO/Xamarin">Xamarin</a>
 			</li>
 			<li>
 				<a href="/file-formats/DocIO/Working-with-document">Working with Document</a>
