TOC Issue Fixes

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -13,7 +13,7 @@
 				<a href="/file-formats/DocIO/Document-Object-Model-representation">Document Object Model representation</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Loading-&-Saving-document">Loading & Saving document</a>
+				<a href="/file-formats/DocIO/Loading-and-Saving-document">Loading and Saving document</a>
 			</li>
 			<li>
 				<a href="/file-formats/DocIO/ASP.NET">ASP.NET</a>
@@ -156,7 +156,7 @@
 				<a href="/file-formats/Presentation/Document-Object-Model">Document Object Model</a>
 			</li>
 			<li>
-				<a href="/file-formats/Presentation/Loading-&-saving-Presentation-file">Loading & saving presentation file</a>
+				<a href="/file-formats/Presentation/Loading-and-saving-Presentation-file">Loading and saving presentation file</a>
 			</li>			
 			<li>
 				<a href="/file-formats/presentation/ASP.NET">ASP.NET</a>
