Fixed the heading level and missing content issue

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -37,7 +37,7 @@
 				<a href="/file-formats/DocIO/Xamarin">Xamarin</a>
 			</li>
 			<li>
-				<a href="/file-formats/DocIO/Working-with-document">Working with Document</a>
+				<a href="/file-formats/DocIO/Working-with-Word-document">Working with Word Document</a>
 			</li>
 			<li>
 				<a href="/file-formats/DocIO/Working-with-Sections">Working with Sections</a>
