--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -207,6 +207,12 @@
          <li><a href="/file-formats/xlsio/overview">Overview</a></li>
          <li><a href="/file-formats/xlsio/getting-started">Getting Started</a></li>
          <li><a href="/file-formats/xlsio/loading-and-saving-workbook">Loading and Saving Workbook</a></li>
+		 <li><a href="/file-formats/xlsio/asp.net">ASP.NET</a></li>
+		 <li><a href="/file-formats/xlsio/asp.net-mvc">ASP.NET MVC</a></li>
+		 <li><a href="/file-formats/xlsio/silverlight">Silverlight</a></li>
+		 <li><a href="/file-formats/xlsio/winrt">WinRT</a></li>
+		 <li><a href="/file-formats/xlsio/windows-phone">Windows Phone</a></li>
+		 <li><a href="/file-formats/xlsio/xamarin">Xamarin</a></li>		 
          <li><a href="/file-formats/xlsio/working-with-excel-worksheet">Working with Excel Worksheet</a></li>
          <li><a href="/file-formats/xlsio/worksheet-rows-and-columns-manipulation">Worksheet Rows and Columns Manipulation</a></li>
          <li><a href="/file-formats/xlsio/worksheet-cells-manipulation">Worksheet Cells Manipulation</a></li>
