Fixed the issues in toc file for presentation.

--- a/File-Formats-toc.html
+++ b/File-Formats-toc.html
@@ -156,16 +156,16 @@
 				<a href="/file-formats/Presentation/Document-Object-Model">Document Object Model</a>
 			</li>
 			<li>
-				<a href="/file-formats/Presentation/Loading-and-saving-Presentation-file">Loading and saving presentation file</a>
+				<a href="/file-formats/Presentation/Loading-and-Saving-the-Presentation">Loading and saving Presentation</a>
 			</li>			
 			<li>
-				<a href="/file-formats/presentation/ASP.NET">ASP.NET</a>
+				<a href="/file-formats/Presentation/ASP.NET">ASP.NET</a>
 			</li>
 			<li>
-				<a href="/file-formats/presentation/ASP.NET-MVC">ASP.NET MVC</a>
+				<a href="/file-formats/Presentation/ASP.NET-MVC">ASP.NET MVC</a>
 			</li>
 			<li>
-				<a href="/file-formats/Presentation/Working-with-Presentation">Working with Presentation</a>
+				<a href="/file-formats/Presentation/Working-with-PowerPoint-presentation">Working with Presentation</a>
 			</li>
 			<li>
 				<a href="/file-formats/Presentation/Working-with-Slide">Working with Slides</a>
